<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_logo_96" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/mainColor"
            android:textSize="42sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/shape_border"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="70"
                android:text="@string/email"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/actv_email"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_weight="30"
                android:drawableEnd="@drawable/email_24px"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/textColor"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_border"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="70"
                android:text="@string/password"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <AutoCompleteTextView
                android:id="@+id/actv_password"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:layout_weight="30"
                android:drawableEnd="@mipmap/lock"
                android:inputType="textPassword"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/textColor"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/shape_button"
        android:text="@string/signIn"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lay_social"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btn_signIn"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_googleSignIn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/google_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_social"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registerWord"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            android:textColor="@color/linkColor" />

    </LinearLayout>
</RelativeLayout>